--- a/scribbles_project/template/loginpage.html
+++ b/scribbles_project/template/loginpage.html
@@ -13,7 +13,8 @@
   <main class="transition-all flex justify-center items-center flex-grow h-screen bg-cover bg-center" style="background-image: url('/scribbles/src/images/SS_large_light.png'); font-family: Poppins;">
     <div class="mr-5 mb-16 bg-black bg-opacity-75 text-white p-12 rounded-br-3xl rounded-tl-3xl shadow-lg w-full max-w-xl">
       <h2 class="text-3xl font-bold mb-8 text-center text-gray-100">Log In</h2>
-      <form action="userDashboard.html" method="POST" class="space-y-6">
+      <form action="user-dashboard.html" method="POST" class="space-y-6">
+        {% csrf_token %} 
         <div>
           <label for="email" class="block text-base font-medium text-white">Username</label>
           <input 
