--- a/scribbles_project/template/login.html
+++ b/scribbles_project/template/login.html
@@ -7,15 +7,15 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="flex flex-col h-screen">
+<body class="flex bg-gray-100 flex-col h-screen">
 
  
-  <main class="transition-all flex justify-center items-center flex-grow h-screen bg-cover bg-center" style="background-image: url('/scribbles/src/images/SS_large_light.png'); font-family: Poppins;">
-    <div class="mr-5 mb-16 bg-black bg-opacity-75 text-white p-12 rounded-br-3xl rounded-tl-3xl shadow-lg w-full max-w-xl">
-      <h2 class="text-3xl font-bold mb-8 text-center text-gray-100">Log In</h2>
+  <main class="transition-all flex justify-center items-center flex-grow h-screen bg-cover bg-center" style="background-image: url('/scribbles/src/images/SS_large_light.png');">
+    <div class="mr-5 mb-16 bg-white bg-opacity-75 text-black p-12 rounded-br-3xl rounded-tl-3xl shadow-lg w-full max-w-xl">
+      <h2 class="text-3xl font-bold mb-8 text-center text-black">Log In</h2>
       <form action="userDashboard.html" method="POST" class="space-y-6">
         <div>
-          <label for="email" class="block text-base font-medium text-white">Username</label>
+          <label for="email" class="block text-base font-medium text-black">Username</label>
           <input 
             type="email" 
             id="email" 
@@ -25,7 +25,7 @@
             class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-3xl shadow-sm placeholder-gray-400 text-black focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 text-base">
         </div>
         <div class="relative">
-          <label for="password" class="block text-base font-medium text-white">Password</label>
+          <label for="password" class="block text-base font-medium text-black">Password</label>
           <input 
             type="password" 
             id="password" 
@@ -41,18 +41,18 @@
         </div>
         
         <div>
-          <button type="submit" class="w-full px-6 py-4 bg-purple-600 text-white font-medium rounded-3xl hover:bg-gradient-to-r from-purple-400 via-purple-600 to-blue-500 text-lg">
+          <button type="submit" class="w-full px-6 py-4 bg-gradient-to-r from-purple-400 to-blue-500 hover:opacity-75 text-white font-medium rounded-3xl text-lg">
             Log In
           </button>
         </div>
       </form>
       
       <p class="mt-4 text-center text-base text-white">
-        <a href="forgot-password.html" class="text-white hover:text-purple-600 font-medium">Forgot Password?</a>
+        <a href="forgot-password.html" class="text-black hover:text-purple-600 font-medium">Forgot Password?</a>
       </p>
-      <p class="mt-8 text-center text-base text-white">
+      <p class="mt-8 text-center text-base text-black">
         Don't have an account? 
-        <a href="signup.html" class="text-white hover:text-purple-600 font-medium">Sign up</a>
+        <a href="signup.html" class="text-purple-600 hover:opacity-80 hover: underline;">Sign up</a>
       </p>
     </div>
   </main>
