--- a/scribbles_project/template/loginpage.html
+++ b/scribbles_project/template/loginpage.html
@@ -9,35 +9,13 @@
 </head>
 <body class="flex flex-col h-screen">
 
- 
   <main class="transition-all flex justify-center items-center flex-grow h-screen bg-cover bg-center" style="background-image: url('/scribbles/src/images/SS_large_light.png'); font-family: Poppins;">
     <div class="mr-5 mb-16 bg-black bg-opacity-75 text-white p-12 rounded-br-3xl rounded-tl-3xl shadow-lg w-full max-w-xl">
       <h2 class="text-3xl font-bold mb-8 text-center text-gray-100">Log In</h2>
-      <form action="user-dashboard.html" method="POST" class="space-y-6">
+      <form action="{% url 'loginpage' %}" method="POST" class="space-y-6">
         {% csrf_token %} 
-        <div>
-          <label for="email" class="block text-base font-medium text-white">Username</label>
-          <input 
-            type="email" 
-            id="email" 
-            name="email" 
-            placeholder="JuanDelaCruz@gmail.com"
-            required 
-            class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-3xl shadow-sm placeholder-gray-400 text-black focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 text-base">
-        </div>
-        <div class="relative">
-          <label for="password" class="block text-base font-medium text-white">Password</label>
-          <input 
-            type="password" 
-            id="password" 
-            name="password" 
-            placeholder="*********"
-            required 
-            class="mt-2 block w-full px-4 py-3 border border-gray-300 rounded-3xl shadow-sm placeholder-gray-400 text-black focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 text-base">
-         
-          <span class="material-icons absolute right-4 top-11 text-gray-400 cursor-pointer z-10" id="togglePassword" onclick="togglePassword()">visibility</span>
-        </div>
-        <div class="space-x-3">
+        {{ form.as_p }}
+        <div class="space-x-3"> 
           <input type="checkbox" class="ml-2 scale-150"> <label>Remember me</label>
         </div>
         
@@ -48,7 +26,7 @@
         </div>
       </form>
       
-      <p class="mt-4 text-center text-base text-white">
+      <p class="mt-4 text-center text-base text-black">
         <a href="forgot-password.html" class="text-white hover:text-purple-600 font-medium">Forgot Password?</a>
       </p>
       <p class="mt-8 text-center text-base text-white">
@@ -57,21 +35,6 @@
       </p>
     </div>
   </main>
-
-  <script>
-    function togglePassword() {
-      const passwordInput = document.getElementById('password');
-      const toggleIcon = document.getElementById('togglePassword');
-
-      if (passwordInput.type === 'password') {
-        passwordInput.type = 'text';
-        toggleIcon.textContent = 'visibility_off'; 
-      } else {
-        passwordInput.type = 'password';
-        toggleIcon.textContent = 'visibility'; 
-      }
-    }
-  </script>
 
 </body>
 </html>
