--- a/scribbles_project/template/index.html
+++ b/scribbles_project/template/index.html
@@ -28,7 +28,7 @@
       <h1 class="mt-52 text-3xl font-bold" style="font-family: Poppins;">Share Your Secrets Anonymously</h1>
       <p class="text-center text-lg w-3/4" style="font-family: Poppins;">A space where thoughts, confessions, and stories come alive through words. Read, respond, and reflect.</p>
       <div class="flex flex-col space-y-3">
-        <a href="/scribbles/template/login.html">
+        <a href="loginpage.html">
         <button class="rounded-tl-2xl rounded-br-2xl bg-blue-500 text-white py-2 px-4 hover:bg-gradient-to-r from-purple-400 to-blue-500 font-bold ease-in duration-100" style="font-family: Poppins;">
           Get Started
         </button></a>
